(feat,refactor)重构了make_tokens,不再是switch,而是if,把符号分为2类,需要求值的类,和不需要求值的类

--- a/nemu/Makefile
+++ b/nemu/Makefile
@@ -30,8 +30,8 @@ include Makefile.git
 CC = gcc
 LD = gcc
 INCLUDES  = $(addprefix -I, $(INC_DIR))
-CFLAGS   += -O0 -MMD -Wall -Werror -ggdb3 $(INCLUDES) -D__ISA__=$(ISA) -fomit-frame-pointer
-
+CFLAGS   += -MMD -Wall -Werror -ggdb3 $(INCLUDES) -D__ISA__=$(ISA) -fomit-frame-pointer
+# CLAGS 注释了-O2
 QEMU_DIFF_PATH = $(NEMU_HOME)/tools/qemu-diff
 QEMU_SO = $(QEMU_DIFF_PATH)/build/$(ISA)-qemu-so
 
@@ -68,8 +68,8 @@ NEMU_EXEC := $(BINARY) $(ARGS) $(IMG)
 $(BINARY): $(OBJS)
 	$(call git_commit, "compile")
 	@echo + LD $@
-	@$(LD) -O2 -rdynamic $(SO_LDLAGS) -o $@ $^ -lSDL2 -lreadline -ldl
-
+	@$(LD) -rdynamic $(SO_LDLAGS) -o $@ $^ -lSDL2 -lreadline -ldl
+# LD注释了-O2
 run-env: $(BINARY) $(QEMU_SO)
 
 run: run-env
