(test)完成了对内存引用的测试

--- a/nemu/Makefile
+++ b/nemu/Makefile
@@ -30,8 +30,7 @@ include Makefile.git
 CC = gcc
 LD = gcc
 INCLUDES  = $(addprefix -I, $(INC_DIR))
-CFLAGS   += -MMD -Wall -Werror -ggdb3 $(INCLUDES) -D__ISA__=$(ISA) -fomit-frame-pointer
-# CLAGS 注释了-O2
+CFLAGS   += -MMD -O0 -Wall -Werror -ggdb3 $(INCLUDES) -D__ISA__=$(ISA) -fomit-frame-pointer
 QEMU_DIFF_PATH = $(NEMU_HOME)/tools/qemu-diff
 QEMU_SO = $(QEMU_DIFF_PATH)/build/$(ISA)-qemu-so
 
@@ -68,8 +67,7 @@ NEMU_EXEC := $(BINARY) $(ARGS) $(IMG)
 $(BINARY): $(OBJS)
 	$(call git_commit, "compile")
 	@echo + LD $@
-	@$(LD) -rdynamic $(SO_LDLAGS) -o $@ $^ -lSDL2 -lreadline -ldl
-# LD注释了-O2
+	@$(LD) -O0 -rdynamic $(SO_LDLAGS) -o $@ $^ -lSDL2 -lreadline -ldl
 run-env: $(BINARY) $(QEMU_SO)
 
 run: run-env
