--- a/nexus-am/tests/cputest/Makefile
+++ b/nexus-am/tests/cputest/Makefile
@@ -11,7 +11,7 @@ $(ALL): %: Makefile.%
 Makefile.%: tests/%.c latest
 	@/bin/echo -e "NAME = $*\nSRCS = $<\nLIBS += klib\ninclude $${AM_HOME}/Makefile.app" > $@
 	-@make -s -f $@ ARCH=$(ARCH) $(MAKECMDGOALS)
-	-@rm -f Makefile.$*
+	# -@rm -f Makefile.$*
 
 # cancel rules included by $(AM_HOME)/Makefile.check
 image: ;
