修改nemu的makefile, 使得-l成为默认选项

--- a/nexus-am/tests/cputest/Makefile
+++ b/nexus-am/tests/cputest/Makefile
@@ -6,6 +6,7 @@ ALL = $(basename $(notdir $(shell find tests/. -name "*.c")))
 all: $(addprefix Makefile., $(ALL))
 	@echo "" $(ALL)
 
+#? 这个目标有什么用?
 $(ALL): %: Makefile.%
 
 Makefile.%: tests/%.c latest
