修改Makefile, 使得make的时候不需要参数ARCH和ALL

--- a/nexus-am/tests/cputest/Makefile
+++ b/nexus-am/tests/cputest/Makefile
@@ -3,6 +3,9 @@ include $(AM_HOME)/Makefile.check
 
 ALL = $(basename $(notdir $(shell find tests/. -name "*.c")))
 
+ALL = dummy
+ARCH = x86-nemu
+
 all: $(addprefix Makefile., $(ALL))
 	@echo "" $(ALL)
 
