(feat) pass bit 100075: 22 02                   and    (%edx),%al 执行回归测试, 发现bit没通过, 不过仅仅是译码的问题. 不知道之前是怎么pass的

--- a/nexus-am/tests/cputest/Makefile
+++ b/nexus-am/tests/cputest/Makefile
@@ -3,7 +3,7 @@ include $(AM_HOME)/Makefile.check
 
 ALL = $(basename $(notdir $(shell find tests/. -name "*.c")))
 
-ALL = dummy
+# ALL = dummy
 ARCH = x86-nemu
 
 all: $(addprefix Makefile., $(ALL))
