--- a/nemu/Makefile
+++ b/nemu/Makefile
@@ -46,8 +46,8 @@ OBJS = $(SRCS:src/%.c=$(OBJ_DIR)/%.o)
 # Compilation patterns
 $(OBJ_DIR)/%.o: src/%.c
 	@echo + CC $<
-	@mkdir -p $(dir $@)
-	@$(CC) $(CFLAGS) $(SO_CFLAGS) -c -o $@ $< 2> gcc_error.txt
+	mkdir -p $(dir $@)
+	$(CC) $(CFLAGS) $(SO_CFLAGS) -c -o $@ $< 2> gcc_error.txt
 
 
 # Depencies
