--- a/nexus-am/tests/cputest/Makefile
+++ b/nexus-am/tests/cputest/Makefile
@@ -14,8 +14,8 @@ $(ALL): %: Makefile.%
 
 Makefile.%: tests/%.c latest
 	@/bin/echo -e "NAME = $*\nSRCS = $<\nLIBS += klib\ninclude $${AM_HOME}/Makefile.app" > $@
-	-@make -s -f $@ ARCH=$(ARCH) $(MAKECMDGOALS)
-	# -@rm -f Makefile.$*
+	-@$(MAKE) -f $@ ARCH=$(ARCH) $(MAKECMDGOALS)
+	-@rm -f Makefile.$*
 
 # cancel rules included by $(AM_HOME)/Makefile.check
 image: ;
