--- a/nexus-am/Makefile.compile
+++ b/nexus-am/Makefile.compile
@@ -22,8 +22,8 @@ ASFLAGS  += -MMD $(INCLUDES)
 
 ## Compliation rule for .c -> .o (using gcc)
 $(DST_DIR)/%.o: %.c
-	mkdir -p $(dir $@) && echo + CC $<
-	$(CC) -std=gnu11 $(CFLAGS) -c -o $@ $(realpath $<)
+	@mkdir -p $(dir $@) && echo + CC $<
+	@$(CC) -std=gnu11 $(CFLAGS) -c -o $@ $(realpath $<)
 
 ## Compliation rule for .cpp -> .o (using g++)
 $(DST_DIR)/%.o: %.cpp
