(feat_untest) 3.3 添加fs_open等

--- a/nanos-lite/Makefile
+++ b/nanos-lite/Makefile
@@ -23,7 +23,7 @@ update-ramdisk-single:
 	touch src/files.h
 
 update-fsimg:
-	$(MAKE) -s -C $(NAVY_HOME) ISA=$(ISA)
+	$(MAKE) -C $(NAVY_HOME) ISA=$(ISA)
 
 update-ramdisk-fsimg: update-fsimg
 	$(eval FSIMG_FILES := $(shell find $(FSIMG_PATH) -type f))
@@ -33,5 +33,5 @@ update-ramdisk-fsimg: update-fsimg
 src/syscall.h: $(NAVY_HOME)/libs/libos/src/syscall.h
 	ln -sf $^ $@
 
-update: update-ramdisk-single src/syscall.h
+update: update-ramdisk-fsimg src/syscall.h
 	@touch src/initrd.S
