--- a/navy-apps/Makefile.compile
+++ b/navy-apps/Makefile.compile
@@ -21,7 +21,7 @@ ISA_DEF = __ISA_$(shell echo $(ISA) | tr a-z A-Z)__
 
 CFLAGS_COMMON += -O2 -MMD $(INCLUDES) -D$(ISA_DEF) -static \
                  -fdata-sections -ffunction-sections -fno-builtin -fno-stack-protector
-CFLAGS   += -std=gnu99
+CFLAGS   += -std=gnu99 -g3
 CXXFLAGS += -std=c++11 -ffreestanding -fno-rtti -fno-exceptions
 ASFLAGS  += -MMD $(INCLUDES) -D$(ISA_DEF)
 LDFLAGS  += -e _start
