--- a/navy-apps/apps/am-apps/Makefile
+++ b/navy-apps/apps/am-apps/Makefile
@@ -1,6 +1,7 @@
 include $(NAVY_HOME)/Makefile.check
 
-APPS = coremark dhrystone microbench slider typing litenes
+# APPS = coremark dhrystone microbench slider typing litenes
+APPS = slider typing
 
 APPS_ALL = $(addprefix $(AM_HOME)/apps/, $(APPS)) $(addprefix $(AM_HOME)/tests/, $(TESTS))
 
