(debug) dummy中用execve加载pal是可以运行的

--- a/navy-apps/Makefile
+++ b/navy-apps/Makefile
@@ -1,8 +1,9 @@
 include Makefile.check
 
-APPS = init pal litenes am-apps
-# APPS = init pal litenes
-TESTS = bmp dummy events hello text
+# APPS = init pal litenes am-apps
+APPS = init pal
+# TESTS = bmp dummy events hello text
+# TESTS = dummy hello
 
 APPS_ALL = $(addprefix $(NAVY_HOME)/apps/, $(APPS)) $(addprefix $(NAVY_HOME)/tests/, $(TESTS))
 
